# quickstep

./: Parser.cabal  README.md  RunParser.bat  SetupNotes.wd  cabal.sandbox.config  hlint.yaml  npppWorkspace  stack.yaml
HtmlReport/: README.txt  license.txt
HtmlReport/Reports/: AutoReload.html
HtmlReport/css/: style.css
mergeEngine/: MergeEngine.hs
src/: ImportsParser.hs  LamdahofUtils.hs  LinkParser.hs  LinkParserTypes.hs  ParserRunner.hs  PlanExpander.hs  ReportGenerator.hs  ReportTemplates.hs  ResultInterpreter.hs  ResultParseInterpret.hs  ResultParser.hs  ResultParserShared.hs  SubParsers.hs  TestPlanParser.hs
test/: ImportsParserTest.hs  LamdahofUtilsTest.hs  ParserTest.hs  ParserTestHelpers.hs  ReportGeneratorTest.hs  ResultInterpreterTest.hs  ResultParserTest.hs  ResultParserTestHelpers.hs  TestData.hs
testData/: Another_Dummy_Test_Run.rslt  Cyclic Child.lookup  Cyclic Grandchild.lookup  Cyclic Parent.plan  Cylic Great Grandchild.lookup  Deduplication Functional.plan  Demo_Test_Run.rslt  Missing Lookup.plan  Shadow Child.lookup  Shadow Child2.lookup  Shadow Parent.plan  Undefined LKUp.lookup  Undefined LKUp.plan  Valid Child.lookup  Valid Grandchild.lookup  Valid Parent.plan  Wrong Extension Lookup.plan
