name: Parser
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
data-dir:   .\testData

executable QuickStepMergeEngine
  main-is: MergeEngine.hs
  build-Depends:
    Parser,
    base -any,
    directory -any,
    filemanip -any,
    filepath -any,
    text -any,
    deepseq -any,
    ansi-terminal,
    time -any,
    principled-extended
  default-language: Haskell2010
  hs-source-dirs: mergeEngine
  ghc-options: -ferror-spans -main-is MergeEngine

library
  exposed-modules:
    LamdahofUtils
    LinkParser
    ResultInterpreter
    PlanExpander
    ImportsParser
    TestPlanParser
    ResultParser
    SubParsers
    Paths_Parser
    LinkParserTypes
    ResultParserShared
    ResultParseInterpret
    ParserRunner
    ReportGenerator
    ReportTemplates
  build-depends:
    QuickCheck -any,
    base -any,
    megaparsec >= 5.0,
    quickcheck-text -any,
    raw-strings-qq -any,
    tasty -any,
    tasty-hunit -any,
    tasty-quickcheck -any,
    tasty-th -any,
    text -any,
    mtl -any,
    time -any,
    containers -any,
    filepath -any,
    filemanip -any,
    regex -any,
    directory,
    transformers,
    either,
    ansi-terminal,
    deepseq,
    bytestring,
    principled-extended
  default-language: Haskell2010
  hs-source-dirs: src
  other-modules:
  ghc-options: -ferror-spans

test-suite test-Parser
 type: exitcode-stdio-1.0
 main-is:
   driver.hs
 build-depends:
  Parser,
  QuickCheck -any,
  quickcheck-text -any,
  base -any,
  megaparsec -any,
  raw-strings-qq -any,
  tasty -any,
  tasty-hunit -any,
  tasty-quickcheck -any,
  tasty-th -any,
  tasty-discover -any,
  text -any,
  mtl -any,
  containers -any,
  either,
  transformers,
  directory,
  principled-extended
 default-language: Haskell2010
 hs-source-dirs:
  test
 other-modules:
  LamdahofUtilsTest
  ResultInterpreterTest
  ImportsParserTest
  ParserTestHelpers
  TestData
  ParserTest
  ResultParserTest
  ResultParserTestHelpers
  ResultParserTestHelpers
  ReportGeneratorTest
  Paths_Parser
 ghc-options: -ferror-spans
